# CASMcode_global

./: .cirrus.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTE.md  INSTALL.md  Makefile.am  README.md  build_requirements.txt  configure.ac  make_CMakeLists.py  make_Makemodule.py  pyproject.toml  setup.py  test_requirements.txt
.github/workflows/: build_wheels.yml  test-linux-build.yml  test-linux-conda.yml  test-linux-cxx-only.yml  test-linux.yml  test-macos-build.yml  test-macos-conda.yml  test-macos.yml
conda/: environment.yml
devel_scripts/: create-conda-env-osx.sh  functions.sh  versions.sh
doc/: doxygen_config
include/casm/casm_io/: FileData.hh  Log.hh  SafeOfstream.hh
include/casm/casm_io/container/: json_io.hh
include/casm/global/: definitions.hh  filesystem.hh  version.hh
include/casm/misc/: CASM_math.hh  UnaryCompare.hh  algorithm.hh  string_algorithm.hh
include/casm/system/: RuntimeLibrary.hh
python/: pyproject.toml  setup.py
python/doc/: conf.py  index.rst  installation.rst
python/libcasm/casmglobal/: __init__.py
python/libcasm/container/: __init__.py
python/src/: casmglobal.cpp  container.cpp  counter.cpp
python/tests/casmglobal/: test_casmglobal.py
python/tests/container/: test_container.py
src/casm/casm_io/: FileData.cc  Log.cc
src/casm/global/: version.cc
src/casm/system/: RuntimeLibrary.cc
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/unit/casm_io/: Log_test.cpp  jsonParser_test.cpp
tests/unit/global/: version_test.cpp
tests/unit/system/: RuntimeLibrary_test.cpp
(+11 files in other folders)
