[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake>=3.20",
    "ninja",
    "pybind11>=2.6"
]
build-backend = "setuptools.build_meta"

[project]
name = "libcasm-global"
version = "2.0a1"
authors = [
  { name="CASM developers", email="casm-developers@lists.engr.ucsb.edu" },
]
description = "Constants, definitions, and generically useful tools used by CASM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LGPL2.1+"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
]

[project.urls]
Homepage = "https://prisms-center.github.io/CASMcode_docs/"
Repository = "https://github.com/prisms-center/CASMcode_global"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest -rsap {project}/python/tests"
